# cForge

./: CMakeLists.txt  HELP.txt  README.md
src/: builder.c  common.c  console_colors.h  main.c
static/: CMakeLists.txt  HELP.txt  main.c  tests.c
